fix: Update styles to use rem units for font size, add the '-letter-spacing' variable to global styles to standardize letter spacing, embed the 'Lato' font in the project, and rename 'font-weight-bold' to '-font-weight-bold' following the BEM standard. Additionally, introduce variants on label colors using the main colors of the application.

--- a/src/globals/_variables.scss
+++ b/src/globals/_variables.scss
@@ -5,4 +5,5 @@ $ads-text-mian-hover: #000;
 $ads-background-main: #f5f5f5;
 $ads-color-main: #fff;
 $ads-size-main: 1.3rem;
-$font-weight-bold: 700;
+$ads-font-weight-bold: 700;
+$ads-letter-spacing: 0.0625rem;
